@@ -48,7 +48,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashMap
+name|HashSet
 import|;
 end_import
 
@@ -59,16 +59,6 @@ operator|.
 name|util
 operator|.
 name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -954,23 +944,19 @@ name|String
 name|nodeManagerVersion
 decl_stmt|;
 comment|/* set of containers that have just launched */
-DECL|field|justLaunchedContainers
+DECL|field|launchedContainers
 specifier|private
 specifier|final
-name|Map
+name|Set
 argument_list|<
 name|ContainerId
-argument_list|,
-name|ContainerStatus
 argument_list|>
-name|justLaunchedContainers
+name|launchedContainers
 init|=
 operator|new
-name|HashMap
+name|HashSet
 argument_list|<
 name|ContainerId
-argument_list|,
-name|ContainerStatus
 argument_list|>
 argument_list|()
 decl_stmt|;
@@ -2585,6 +2571,54 @@ operator|.
 name|getNMContainerStatuses
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|containers
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|containers
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+for|for
+control|(
+name|NMContainerStatus
+name|container
+range|:
+name|containers
+control|)
+block|{
+if|if
+condition|(
+name|container
+operator|.
+name|getContainerState
+argument_list|()
+operator|==
+name|ContainerState
+operator|.
+name|RUNNING
+condition|)
+block|{
+name|rmNode
+operator|.
+name|launchedContainers
+operator|.
+name|add
+argument_list|(
+name|container
+operator|.
+name|getContainerId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 if|if
 condition|(
@@ -3581,9 +3615,9 @@ condition|(
 operator|!
 name|rmNode
 operator|.
-name|justLaunchedContainers
+name|launchedContainers
 operator|.
-name|containsKey
+name|contains
 argument_list|(
 name|containerId
 argument_list|)
@@ -3592,13 +3626,11 @@ block|{
 comment|// Just launched container. RM knows about it the first time.
 name|rmNode
 operator|.
-name|justLaunchedContainers
+name|launchedContainers
 operator|.
-name|put
+name|add
 argument_list|(
 name|containerId
-argument_list|,
-name|remoteContainer
 argument_list|)
 expr_stmt|;
 name|newlyLaunchedContainers
@@ -3615,7 +3647,7 @@ block|{
 comment|// A finished container
 name|rmNode
 operator|.
-name|justLaunchedContainers
+name|launchedContainers
 operator|.
 name|remove
 argument_list|(
@@ -3967,6 +3999,24 @@ name|nodeUpdateQueue
 operator|.
 name|size
 argument_list|()
+return|;
+block|}
+comment|// For test only.
+annotation|@
+name|VisibleForTesting
+DECL|method|getLaunchedContainers ()
+specifier|public
+name|Set
+argument_list|<
+name|ContainerId
+argument_list|>
+name|getLaunchedContainers
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|launchedContainers
 return|;
 block|}
 block|}
