@@ -130,6 +130,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -191,6 +201,24 @@ operator|.
 name|records
 operator|.
 name|ApplicationId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerId
 import|;
 end_import
 
@@ -387,6 +415,26 @@ operator|.
 name|rmcontainer
 operator|.
 name|RMContainerState
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|resourcemanager
+operator|.
+name|rmnode
+operator|.
+name|RMNodeImpl
 import|;
 end_import
 
@@ -1306,6 +1354,62 @@ name|am1
 operator|.
 name|getApplicationAttemptId
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|Set
+argument_list|<
+name|ContainerId
+argument_list|>
+name|launchedContainers
+init|=
+operator|(
+operator|(
+name|RMNodeImpl
+operator|)
+name|rm2
+operator|.
+name|getRMContext
+argument_list|()
+operator|.
+name|getRMNodes
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|nm1
+operator|.
+name|getNodeId
+argument_list|()
+argument_list|)
+operator|)
+operator|.
+name|getLaunchedContainers
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|launchedContainers
+operator|.
+name|contains
+argument_list|(
+name|amContainer
+operator|.
+name|getContainerId
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|launchedContainers
+operator|.
+name|contains
+argument_list|(
+name|runningContainer
+operator|.
+name|getContainerId
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// check RMContainers are re-recreated and the container state is correct.
